--- a/index.html
+++ b/index.html
@@ -1,86 +1,66 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #222;
-    color: #fff;
-}
+<!DOCTYPE html>
+<html lang="pt-br">
 
-header {
-    background-color: #333;
-    padding: 20px;
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Site</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#sobre-mim">Sobre Mim</a></li>
+                <li><a href="#formacao">Formação Educacional</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contato">Entre em Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Criei seções para dividir o conteudo dentro da mesma página. Uso a ideia de landing page (todo o conteúd na mesma pagina, para deixa a experiencia mais fluida e criar maior facilidade ao procurar uma informação) -->
+    <section id="sobre-mim">
+        <h2>Sobre Mim</h2>
+        <p>Olá! Sou o Vinicius, um profissional dedicado e multidisciplinar, com um formação em Psicologia e uma paixão
+            crescente pela interseção entre UX Design e Engenharia de Software. Atualmente, atuo como Analista de UX
+            Design, onde aplico meu conhecimento em psicologia para entender as necessidades dos usuários e criar
+            soluções que atendam às suas expectativas.
+            Minha missão é criar experiências digitais significativas e intuitivas que proporcionem satisfação e
+            facilidade de uso. Minha jornada acadêmica na Engenharia de Software é uma busca contínua por aprimorar
+            minhas habilidades técnicas e ampliar meu horizonte profissional e acredito que irá somar bastante em todos
+            os meus trabalhos. Além do UX Design, tenho um interesse no desenvolvimento de software, onde também posso
+            ter um impacto positivo na vida do usuário final dos produtos em que eu atuar.</p>
+    </section>
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
+    <section id="formacao">
+        <h2>Formação Educacional</h2>
+        <ul>
+            <li>Psicologia - PUC MINAS</li>
+            <li>Product Design - Gama Academy</li>
+            <li>Engenharia de Software - UNINTER</li>
+        </ul>
+    </section>
 
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
+    <section id="portfolio">
+        <h2>Portfolio</h2>
+        <a href="https://www.behance.net/viniciuspereira31">Portfolio Behance</a>
+        <br/>
+        <a href="https://www.linkedin.com/in/viniciushper/">Linkedin</a>
+    </section>
 
-nav ul li a:hover {
-    color: #ffd700; 
-}
+    <section id="contato">
+        <h2>Entre em Contato</h2>
+        <form action="#" method="post">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="mensagem">Mensagem:</label>
+            <textarea id="mensagem" name="mensagem" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
+</body>
 
-section {
-    padding: 40px;
-    margin-bottom: 40px;
-}
-
-h2 {
-    color: #1bc978; 
-    margin-bottom: 20px;
-}
-
-a {
-    color: #fff;
-}
-
-form label {
-    display: block;
-    margin-bottom: 10px;
-    color: #1bc978; 
-}
-
-form input[type="text"],
-form input[type="email"],
-form textarea {
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #444;
-    color: #fff;
-}
-
-form input[type="text"]:focus,
-form input[type="email"]:focus,
-form textarea:focus {
-    outline: none;
-    background-color: #555;
-}
-
-form button {
-    padding: 15px 30px;
-    background-color: #ffd700; 
-    color: #222;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-form button:hover {
-    background-color: #ffc107; 
-}
+</html>
